# LotkaVolterraSyntheticData

./: LICENSE  README.md  main.py  pyproject.toml
data/: after_chronos_hare.csv  after_chronos_lynx.csv  chosen_quantiles_hare.csv  chosen_quantiles_lynx.csv  full_lodka_voltera_data.csv
